nix-ast/src/snapshots/nix_ast__test__fixture@invalid_syntax.nix.snap
---
source: nix-ast/src/lib.rs
expression: "{ in }\n"
input_file: nix-ast/fixtures/invalid_syntax.nix
---
Error: Syntax error
   ╭─[ <unknown>:1:3 ]
   │
 1 │ { in }
   │   ─┬  
   │    ╰── Unexpected token In expected one of [BraceClose, Ident]
───╯
